--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -1,6 +1,16 @@
-div {
-    width: 50%;
+.AuthPage {
+    height: 100%;
     display: flex;
-    justify-content: center;
-    margin: auto;
-}
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: var(--white);
+    border-radius: 2vmin;
+  }
+  
+  .AuthPage h3 {
+    margin-top: 4vmin;
+    text-align: center;
+    color: var(--text-light);
+    cursor: pointer;
+  }
+  
