--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -64,8 +64,7 @@
   color: blue;
   position: relative;
   z-index: 1;
-  margin-right: 30px;
-  box-sizing:content-box;
+  margin-right: 15px;
 }
 
 
@@ -80,9 +79,10 @@
   left: 0;
   width: 5vw;
   height: 20px;
-  background: red;
+  background-color: red;
   border-radius: 20px;
-  animation: stretch 3s linear infinite;
+  animation: stretch 3s alternate infinite;
+  animation-delay: 2ms;
   z-index: 2;
 }
 
