--- a/src/components/ChoreListItem/ChoreListItem.css
+++ b/src/components/ChoreListItem/ChoreListItem.css
@@ -3,6 +3,7 @@
     padding-left: 1.5vmin;
     justify-content: space-evenly;
     justify-content: left;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .completedButton {
