--- a/src/pages/NewChorePage/NewChorePage.css
+++ b/src/pages/NewChorePage/NewChorePage.css
@@ -1,9 +1,13 @@
+.NewChorePage > h1 {
+    font-size: 5vmin !important;
+}
+
 .NewChoreForm > form {
     display: flex;
     flex-direction: column;
     width: 50vmin;
-    align-content: center;
-    font-size: 5vmin;
+    align-items: center;
+    font-size: 3vmin;
     border: 1;
     border: 5px solid blue;
     outline: 5px solid red;
@@ -11,6 +15,7 @@
     border-radius: 5%;
     padding: 5vmin;
     margin: 5vmin;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .NewChoreForm {
@@ -18,11 +23,19 @@
     justify-content: center;
 }
 
-.NewChoreForm > form > *{
+.NewChoreForm > form > * {
     margin: 2vmin;
 }
 
+.NewChoreForm > form > label > input {
+    width: 30vmin;
+}
+
 .NewChoreForm > form > label > select{
-    font-size: 3.5vmin;
+    font-size: 2vmin;
     text-align: center;
+}
+
+.NewChoreForm > form > button {
+    width: 15vmin;
 }
