--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -12,6 +12,7 @@
     color: blue;
     margin: 5px;
     width: 50vmin;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .SignUpForm > form > button {
